--- a/src/Components/ProjectDetail/ProjectDetail.css
+++ b/src/Components/ProjectDetail/ProjectDetail.css
@@ -7,7 +7,17 @@
     font-size: 50px;
     margin-bottom: 20px;
     margin-top: 20px;
+    background: linear-gradient(270deg, #DF8908 50.41%, #B415FF 90.25%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
+
+  .project-detail p {
+    font-size: 20px;
+    font-weight: 100;
+  }
+
 
   .project-img {
     width: 60%;
@@ -26,6 +36,7 @@
   .links a {
     display: inline-block;
     margin: 50px;
+    margin-top: 30px;
     padding: 10px 15px;
     background-color: #007bff;
     color: white;
@@ -33,7 +44,7 @@
     border-radius: 5px;
   }
   .back-button {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     padding: 10px 20px;
     background-color:rgb(0, 128, 66);
     color: white;
@@ -41,10 +52,42 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    margin-right: 950px;
+    margin-right: 999px;
   }
   
   .back-button:hover {
     background-color: rgb(0, 128, 66);
   }
+  .description{
+    margin-top: 0px;
+  }
+  .description ul {
+    list-style-type: disc;
+    text-align: left;
+    margin-left: 230px;
+    padding-left: 20px;
+    margin-top: 20px;
+    font-weight: 800px;
+  }
+  
+  .description li {
+    font-size: 18px;
+    margin-bottom: 5px;
+    font-size: 20px;
+  }
+
+  .description strong {
+    font-size: 40px;
+  }
+
+  /* Skills Used styling */
+.project-detail p strong {
+  color: darkgray;
+  font-size: 22px;
+}
+
+
+
+
+
   
